--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -24,9 +24,9 @@
       "DEBUG:platform is win32\n",
       "DEBUG:CACHEDIR=C:\\Users\\heine\\.matplotlib\n",
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
-      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'ayush', 'vinayak', 'rachel', 'vishnesh'}\n",
+      "INFO:Found users: {'rachel', 'ayush', 'vishnesh', 'vinayak'}\n",
       "\n"
      ]
     },
@@ -34,21 +34,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "180: simpeval-22/T5-3B\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
+      "180: simpeval-22/T5-11B\n",
       "180: simpeval-22/Human-1-written\n",
-      "170: simpeval-22/GPT-3-few-shot\n",
-      "171: simpeval-22/GPT-3-zero-shot\n",
-      "170: simpeval-22/T5-3B\n",
-      "180: simpeval-22/Muss\n",
-      "171: simpeval-22/T5-11B\n",
       "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/Muss\n",
+      "180: simpeval-22/GPT-3-few-shot\n",
       "\n",
-      "90: simpeval-ext/Human-2-written\n",
-      "90: simpeval-ext/Muss\n",
-      "91: simpeval-ext/T5-11B\n",
-      "88: simpeval-ext/Human-1-written\n",
-      "91: simpeval-ext/T5-3B\n",
-      "88: simpeval-ext/GPT-3-zero-shot\n",
-      "90: simpeval-ext/GPT-3-few-shot\n"
+      "120: simpeval-ext/Human-2-written\n",
+      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/Human-1-written\n",
+      "120: simpeval-ext/T5-11B\n",
+      "120: simpeval-ext/T5-3B\n",
+      "120: simpeval-ext/GPT-3-few-shot\n",
+      "120: simpeval-ext/Muss\n"
      ]
     }
    ],
@@ -102,9 +102,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'ayush', 'vinayak', 'rachel', 'vishnesh'}\n",
+      "INFO:Found users: {'rachel', 'ayush', 'vishnesh', 'vinayak'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -115,27 +115,30 @@
       "WARNING:rachel - Batch 2, HIT 311 (ID 931) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 2, HIT 321 (ID 961) has 9 substitution edits but 8 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 2, HIT 373 (ID 1117) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:ayush - Batch 3, HIT 573 (ID 1363) has 3 reorder edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 579 (ID 1382) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 587 (ID 1406) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:vinayak - Batch 3, HIT 488 (ID 1201) has 5 structure edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:ayush - Batch 3, HIT 573 (ID 1455) has 3 reorder edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 579 (ID 1474) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 587 (ID 1498) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:Annotation doesnt exist for edit\n",
       "WARNING:Annotation doesnt exist for edit\n",
       "WARNING:Annotation doesnt exist for edit\n",
-      "WARNING:rachel - Batch 4, HIT 605 (ID 1460) has 5 substitution edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 426 (ID 1518) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 475 (ID 1616) has 2 structure edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 3, HIT 479 (ID 1624) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 673 (ID 1795) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 675 (ID 1799) has 3 substitution edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 679 (ID 1807) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 605 (ID 1552) has 5 substitution edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 426 (ID 1635) has 1 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 475 (ID 1782) has 2 structure edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 3, HIT 479 (ID 1794) has 2 deletion edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 673 (ID 2017) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 675 (ID 2023) has 3 substitution edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 679 (ID 2035) has 4 substitution edits but 3 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:Annotation doesnt exist for edit\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 2 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 4 substitution edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 3 reorder edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 692 (ID 1833) has 5 deletion edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
-      "WARNING:rachel - Batch 4, HIT 699 (ID 1847) has 1 insertion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 2 deletion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 4 substitution edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 split edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 3 reorder edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 2056) has 1 structure edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:Annotation doesnt exist for edit\n",
+      "WARNING:rachel - Batch 4, HIT 692 (ID 2074) has 5 deletion edits but 4 annotations. Likely a missing annotation. Skipping edit type...\n",
+      "WARNING:rachel - Batch 4, HIT 699 (ID 2095) has 1 insertion edits but 0 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:No deletion annotation found. Skipping...\n",
       "DEBUG:Couldn't process grammar for deletion: ['bad', '', 'no', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
@@ -184,7 +187,10 @@
       "DEBUG:Couldn't process grammar for deletion: ['good', 'somewhat', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['negative', '', 'a lot', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process positive rating for substitution: ['negative', '', 'a lot', '']. Assuming 'somewhat'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'somewhat', '', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process coreference error for deletion: ['bad', 'a lot', '', 'no']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process positive rating for substitution: ['changes tense', '', 'positive', '', 'no']. Assuming 'somewhat'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
@@ -198,6 +204,7 @@
       "DEBUG:Couldn't process positive rating for substitution: ['changes clause', '', 'no', '', '']. Assuming 'somewhat'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['changes grammatical number', '', 'positive', 'minor', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for deletion: ['good', 'minor', '']. Assuming 'no'...\n",
+      "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
       "DEBUG:Couldn't process grammar for substitution: ['positive', 'minor', '', '']. Assuming 'no'...\n",
@@ -286,7 +293,7 @@
    "source": [
     "def get_tag_values(tags, family_constraint=None):\n",
     "    # Recover word QE\n",
-    "    word_qe, word_ratings, edit_qe = [], [], []\n",
+    "    word_qe, word_ratings, edit_qe, edit_id = [], [], [], []\n",
     "    for tag in tags.keys():\n",
     "        ratings = [i for j in tags[tag].values() for i in j]\n",
     "        if family_constraint:\n",
@@ -308,7 +315,18 @@
     "\n",
     "        # whether edit exists, edit > no edit\n",
     "        edit_qe += ['edit' if any([edit['edit_qe'] for edit in ratings]) else 'noedit']\n",
-    "    return word_qe, word_ratings, edit_qe"
+    "\n",
+    "        # whether each word is bad/ok, bad > ok\n",
+    "        word_id = 'ok'\n",
+    "        if any([edit['word_qe'] == 'bad' for edit in ratings]):\n",
+    "            word_id = 'bad'\n",
+    "        edit_id += [word_id]\n",
+    "    return {\n",
+    "        'word_qe': word_qe, \n",
+    "        'word_ratings': word_ratings, \n",
+    "        'edit_qe': edit_qe,\n",
+    "        'edit_id': edit_id\n",
+    "    }"
    ]
   },
   {
@@ -417,22 +435,22 @@
     "    for family_constraint in [None] + list(Family):\n",
     "        for sentence_type in ['original', 'simplified']:\n",
     "            tags = get_annotations_per_token([sent], sentence_type, remove_none=False, tagging=True)\n",
-    "            word_qe, word_ratings, edit_qe = get_tag_values(tags, family_constraint)\n",
+    "            tags_by_type = get_tag_values(tags, family_constraint)\n",
     "\n",
-    "            word_qe = write_tagged_sentence(sent[sentence_type], tags, word_qe)\\\n",
-    "                .replace('<ok>', '')\\\n",
-    "                .replace('</ok>', '')\n",
-    "            word_ratings = write_tagged_sentence(sent[sentence_type], tags, word_ratings)\n",
-    "            edit_qe = write_tagged_sentence(sent[sentence_type], tags, edit_qe)\\\n",
-    "                .replace('<noedit>', '')\\\n",
-    "                .replace('</noedit>', '')\n",
+    "            for tag_type, tag_value in tags_by_type.items():\n",
+    "                tag_value = write_tagged_sentence(sent[sentence_type], tags, tag_value)\n",
+    "\n",
+    "                if tag_type == 'edit_qe' or tag_type == 'edit_id':  \n",
+    "                    tag_value = tag_value.replace('<ok>', '')\\\n",
+    "                        .replace('</ok>', '')\n",
+    "                elif tag_type == 'word_qe':\n",
+    "                    tag_value = tag_value.replace('<noedit>', '')\\\n",
+    "                       .replace('</noedit>', '')\n",
     "            \n",
-    "            fam_name = f'_{Family.CONTENT.value.lower()}' if family_constraint is not None else ''\n",
-    "            entry.update({\n",
-    "                f'word_qe_{sentence_type}{fam_name}': word_qe,\n",
-    "                f'word_ratings_{sentence_type}{fam_name}': word_ratings,\n",
-    "                f'edit_qe_{sentence_type}{fam_name}': edit_qe,\n",
-    "            })\n",
+    "                fam_name = f'_{Family.CONTENT.value.lower()}' if family_constraint is not None else ''\n",
+    "                entry.update({\n",
+    "                    f'{tag_type}_{sentence_type}{fam_name}': tag_value\n",
+    "                })\n",
     "\n",
     "    out_file += [entry]"
    ]
@@ -460,9 +478,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split = int(len(out_file) * 0.7)\n",
-    "write_csv('salsa/lens-salsa-training/train.csv', out_file[:split])\n",
-    "write_csv('salsa/lens-salsa-training/valid.csv', out_file[split:])"
+    "# Split by src sentence, so we don't have val data that's trained on outputs\n",
+    "src_sents = list(set(s['src'] for s in out_file))\n",
+    "split = int(len(src_sents) * 0.7)\n",
+    "src_sents_train, src_sents_val = src_sents[:split], src_sents[split:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_csv('salsa/lens-salsa-training/train.csv', [s for s in out_file if s['src'] in src_sents_train])\n",
+    "write_csv('salsa/lens-salsa-training/valid.csv', [s for s in out_file if s['src'] in src_sents_val])"
    ]
   }
  ],
