fix tagging script

--- a/data/final-packaging.ipynb
+++ b/data/final-packaging.ipynb
@@ -26,7 +26,7 @@
       "DEBUG:Using fontManager instance from C:\\Users\\heine\\.matplotlib\\fontlist-v330.json\n",
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vishnesh', 'vinayak'}\n",
+      "INFO:Found users: {'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
       "\n"
      ]
     },
@@ -34,21 +34,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180: simpeval-22/T5-3B\n",
-      "180: simpeval-22/GPT-3-zero-shot\n",
       "180: simpeval-22/T5-11B\n",
-      "180: simpeval-22/Human-1-written\n",
-      "180: simpeval-22/Human-2-written\n",
       "180: simpeval-22/Muss\n",
+      "180: simpeval-22/GPT-3-zero-shot\n",
       "180: simpeval-22/GPT-3-few-shot\n",
+      "180: simpeval-22/Human-2-written\n",
+      "180: simpeval-22/T5-3B\n",
+      "180: simpeval-22/Human-1-written\n",
       "\n",
       "120: simpeval-ext/Human-2-written\n",
-      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/Muss\n",
       "120: simpeval-ext/Human-1-written\n",
-      "120: simpeval-ext/T5-11B\n",
-      "120: simpeval-ext/T5-3B\n",
       "120: simpeval-ext/GPT-3-few-shot\n",
-      "120: simpeval-ext/Muss\n"
+      "120: simpeval-ext/GPT-3-zero-shot\n",
+      "120: simpeval-ext/T5-3B\n",
+      "120: simpeval-ext/T5-11B\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
      "text": [
       "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vinayak.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vinayak.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'rachel', 'ayush', 'vishnesh', 'vinayak'}\n",
+      "INFO:Found users: {'vishnesh', 'vinayak', 'ayush', 'rachel'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation. Skipping edit type...\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation. Skipping edit type...\n",
@@ -440,10 +440,10 @@
     "            for tag_type, tag_value in tags_by_type.items():\n",
     "                tag_value = write_tagged_sentence(sent[sentence_type], tags, tag_value)\n",
     "\n",
-    "                if tag_type == 'edit_qe' or tag_type == 'edit_id':  \n",
+    "                if tag_type == 'word_qe' or tag_type == 'edit_id':  \n",
     "                    tag_value = tag_value.replace('<ok>', '')\\\n",
     "                        .replace('</ok>', '')\n",
-    "                elif tag_type == 'word_qe':\n",
+    "                elif tag_type == 'edit_qe':\n",
     "                    tag_value = tag_value.replace('<noedit>', '')\\\n",
     "                       .replace('</noedit>', '')\n",
     "            \n",
